* Fix admin template spacing issues.

--- a/themes/admin/style.css
+++ b/themes/admin/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .select-filters {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .stream-item {
